<resources>
    <string name="sure_quit">您确定要退出吗?</string>
    <string name="sure_delete_title">"您确定要删除吗？"</string>
    <string name="download_image_failed">"图片下载失败"</string>
    <string name="download_image_success">"图片下载成功:%s"</string>
    <string name="app_name">CommonRes</string>
    <string name="reset">重置</string>
    <string name="confirm">确定</string>
    <string name="suspending">待处理</string>
    <string name="similarity">相似度</string>
    <string name="valid">有效</string>
    <string name="invalid">无效</string>
    <string name="title_name">标题</string>
    <string name="name">姓名</string>
    <string name="user_name">用户名</string>
    <string name="person_id">证件号</string>
    <string name="person_birth_place">籍贯</string>
    <string name="person_address">居住地</string>
    <string name="long_time_disappear">长期未出现</string>
    <string name="related_cars">相关车辆</string>
    <string name="social_relations">社会关系</string>
    <string name="foot_hold">落脚点</string>
    <string name="social_experience">社会经历</string>
    <string name="loading_comment">正在加载中&#8230;</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="no_more_data">已经全部加载完毕</string>
    <string name="type">类型</string>
    <string name="time">时间</string>
    <string name="account_migration">户口迁移</string>
    <string name="migrate_out">迁出地</string>
    <string name="migrate_in">迁入地</string>
    <string name="real_personnel_info">真实人员信息</string>
    <string name="vid_personnel_info">VID人员信息</string>
    <string name="people_in_same_house">同户人员</string>
    <string name="query_trajectory">查询轨迹</string>
    <string name="permanent_resident">常住人员</string>
    <string name="peer_staff">同行人员</string>
    <string name="frequently_visited_place">常去地</string>
    <string name="recent_trajectory">最近轨迹</string>
    <string name="mechanics">活动规律</string>
    <string name="cancel">取消</string>
    <string name="search_result">搜索结果</string>
    <string name="filter">筛选</string>
    <string name="done">完成</string>
    <string name="test">测试</string>
    <string name="all_type">所有分类</string>
    <string name="sex">性别</string>
    <string name="count">%1$s(%2$d)</string>
    <string name="more">更多</string>
    <string name="nation">民族</string>
    <string name="residence">户籍</string>
    <string name="start_query">开始查询</string>
    <string name="query">查询</string>
    <string name="vid">VID</string>
    <string name="aggregation_classify_picture">聚类图片</string>
    <string name="recent_time">最近时间</string>
    <string name="recent_address">最近地点</string>
    <string name="tips">提示</string>
    <string name="confirm_delete_the_picture">确认删除该图片?</string>
    <string name="confirm_delete_all_pictures">确认删除所有图片?</string>
    <string name="toast_all_data_has_been_loaded">所有数据已经加载完毕</string>
    <string name="toast_aggregation_imperfect">聚类数量不完善</string>
    <string name="toast_aggregation_format_error">聚类数量格式有误</string>
    <string name="image_count">%d张</string>
    <string name="checked">已查看</string>
    <string name="unchecked">未查看</string>
    <string name="all">全部</string>
    <string name="clear">清空</string>
    <string name="query_hint">请输入搜索内容</string>
    <string name="query_history">历史搜索</string>
    <string name="male">男性</string>
    <string name="famale">女性</string>
    <string name="wear_glasses">戴眼镜</string>
    <string name="no_wear_glasses">未戴眼镜</string>
    <string name="confirm_bt">确认</string>
    <string name="text_label_percent">%1$d%%</string>
    <string name="qiangji">枪机</string>
    <string name="qiu_ji">球机</string>
    <string name="network_disconnect">网络不给力</string>
    <string name="no_network">无网络</string>
    <string name="unknown_network">未知网络</string>
    <string name="network_connect_timeout">网络连接超时</string>
    <string name="network_connect_fail">网络连接失败</string>
    <string name="network_data_error">数据解析失败</string>
    <string name="text_label_warm_tip">温馨提示</string>
    <string name="text_label_fine">好的</string>
    <string name="please_enable_location_service">为了达到更好的定位效果，请先进入设置中开启定位服务</string>
    <string name="please_retry_location_since_failed">定位失败,请退出此界面刷新重试!</string>
    <string name="search_result_of_nothing_for_relations">没有查询到相关内容</string>
    <string name="exit_for_more_click">再按一次退出程序</string>
    <string name="account_login">账号登录</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="password_width">密码长度不够</string>
    <string name="login_plz_input_username">请输入用户名</string>
    <string name="login_plz_input_pwd">请输入密码</string>
    <string name="login_plz_input_ip">请输入IP</string>
    <string name="other_login">其他登录方式</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="service_address">服务地址</string>
    <string name="prompt_input_text">请输入8-20位字母、数字组合</string>
    <string name="face_login">刷脸登录</string>
    <string name="tell_text">13109890324</string>
    <string name="email_text">admin@netposa.com</string>
    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="sure_to_logout">确定退出登录？</string>
    <string name="exit">退出</string>
    <string name="face_login_notice">未开启刷脸登录，请使用用户名登录</string>
    <string name="logining">登录中···</string>
    <string name="jq">警情</string>
    <string name="deploy_car_number">布控车牌号</string>
    <string name="car_number">车牌号</string>
    <string name="deploy_image">布控图片</string>
    <string name="capture_image">抓拍图片</string>
    <string name="device_map_position">设备地图定位</string>
    <string name="alarm_control_pic">布控图片</string>
    <string name="alarm_car_details">警情详情</string>
    <string name="belong_ku">所属库</string>
    <string name="capture_time">抓拍时间</string>
    <string name="control_task_name">布控任务名称</string>
    <string name="camera_name">摄像机名称</string>
    <string name="deal_person">处理人</string>
    <string name="remarks">备注</string>
    <string name="in_effect">有效</string>
    <string name="un_effect">无效</string>
    <string name="similarity_percent">相似度: %1$d%%</string>
    <string name="compare_result">对比结果</string>
    <string name="compare_lib_iv">比对库图片</string>
    <string name="deploy_car">车辆布控</string>
    <string name="deploy_face">人脸布控</string>
    <string name="receive_no_message_deploy_face">未收到人脸布控消息</string>
    <string name="receive_no_message_deploy_car">未收到车辆布控消息</string>
    <string name="no_detail_content">未查询到警情详情</string>
    <string name="deal_suc">处理成功</string>
    <string name="workbench">工作台</string>
    <string name="sfjb">身份鉴别</string>
    <string name="ytst">以图搜图</string>
    <string name="clcx">车辆查询</string>
    <string name="spjk">视频监控</string>
    <string name="rltk">人脸图库</string>
    <string name="please_input_device_name">请输入设备名称</string>
    <string name="list_item_chose">列表选择</string>
    <string name="compare_iv">比对图片</string>
    <string name="sfjb_chose_compairlib">选择比对库</string>
    <string name="sfjb_all_chose">全选</string>
    <string name="sfjb_compair">比对</string>
    <string name="recognition_result">比对结果</string>
    <string name="location_now">正在定位...</string>
    <string name="not_connect_wifi">检测到当前网络未连接至wifi</string>
    <string name="video_not_played">未开始播放视频</string>
    <string name="img_has_saved">截图已保存成功</string>
    <string name="creat_date">创建时间</string>
    <string name="detail_info">详细信息</string>
    <string name="no_result_message">未搜索到比对结果</string>
    <string name="look_orginal_iv">查看原图</string>
    <string name="no_compare_lib">未识别出比对库</string>
    <string name="my">我的</string>
    <string name="person_information">个人信息</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_cache_success">缓存清理成功!</string>
    <string name="organization_related">所属组织</string>
    <string name="police_number">警号</string>
    <string name="phone_number">电话</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="app_description">视频图像解析系统</string>
    <string name="app_version">版本号:%1$s</string>
    <string name="app_update">更新版本</string>
    <string name="upgrade_text">立即更新</string>
    <string name="version_update">版本更新</string>
    <string name="no_new_version">暂无更新地址</string>
    <string name="latest_version">已经是最新版本啦</string>
    <string name="should_update">该更新啦</string>
    <string name="take_picture_tip">拍照过程中请保持脸部处于显示框内</string>
    <string name="copper_face_pic">框选人脸</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="history_video">历史视频</string>
    <string name="unsubscribe">取消关注</string>
    <string name="subscribe">关注设备</string>
    <string name="no_devices_subscribe">没有关注的设备</string>
    <string name="no_history_video">暂无历史视频</string>
    <string name="no_choose_list">未查询到相关列表</string>
    <string name="tv_history_video_time">%1$s 至 %2$s</string>
    <string name="neighbouring_devices">周边设备</string>
    <string name="no_neighbouring_devices">该范围内没有设备</string>
    <string name="map_not_ready">地图还未加载成功，请重试!</string>
    <string name="no_search_result">未搜索到结果</string>
    <string name="plate_number">车牌号码</string>
    <string name="plate_color">车牌颜色</string>
    <string name="car_color">车辆颜色</string>
    <string name="plate_type">车牌类型</string>
    <string name="car_type">车辆类型</string>
    <string name="select_type">选择类型</string>
    <string name="collect_time">采集时间</string>
    <string name="query_hint_plate_number">请输入车牌号码</string>
    <string name="wheel_path">行车轨迹</string>
    <string name="no_result">未找到结果</string>
    <string name="clcx_title">查询结果</string>
    <string name="clcx_record">通行记录</string>
    <string name="clcx_car_info">车辆信息</string>
    <string name="clcx_second_car_info">二次识别信息</string>
    <string name="clcx_car_num">车牌号码</string>
    <string name="clcx_car_speed">行驶速度</string>
    <string name="clxc_cross_device">通过设备</string>
    <string name="clxc_device_type">设备类型</string>
    <string name="violation_information">违章信息</string>
    <string name="clcx_capture_time">抓拍时间</string>
    <string name="sport_speed">运动速度</string>
    <string name="sport_direction">运动方向</string>
    <string name="plate_number_color">车牌颜色</string>
    <string name="car_grand">车辆品牌</string>
    <string name="car_child_type">车型子类</string>
    <string name="car_year_type">车辆年款</string>
    <string name="is_special_car">是否特殊车辆</string>
    <string name="safety_belt">安全带</string>
    <string name="annual_survey">年检标</string>
    <string name="is_telephone">是否打电话</string>
    <string name="sun_visor">遮阳板</string>
    <string name="is_visor_face">是否遮挡面部</string>
    <string name="other_marker">其他标志物</string>
    <string name="show_details">查看详情</string>
    <string name="view_path">查看轨迹</string>
    <string name="device_info_do_not_receive_yet">设备信息暂未获取到，请稍后再试!</string>
    <string name="clcx_unknow">未知</string>
    <string name="clcx_unidentified">未识别</string>
    <string name="clcx_bayonet_info">无卡口信息</string>
    <string name="other">其它</string>
    <string name="clcx_database_copy">已复制字典数据</string>
    <string name="time_quantum">时间段</string>
    <string name="wear_glasses_or_not">有无眼镜</string>
    <string name="twenty_four_hours">24小时</string>
    <string name="three_days">3天</string>
    <string name="seven_days">7天</string>
    <string name="no_query_car">未查询到相关车辆</string>
    <string name="has_choose">已选择</string>
    <string name="no_position">暂未获取点位信息</string>
    <string name="rltk_choce_device">选择设备</string>
    <string name="rltk_photo_information">图片信息</string>
    <string name="capture_device">抓拍设备</string>
    <string name="age">年龄</string>
    <string name="glasses">眼镜</string>
    <string name="no_recordId">暂未选择人员</string>
    <string name="no_deviceId">暂未选择设备</string>
    <string name="search_person">搜人</string>
    <string name="search_car">搜车</string>
    <string name="uploading">上传中···</string>
    <string name="select_target">选择目标</string>
    <string name="time_sort">时间排序</string>
</resources>