<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/load_more_loading_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="@dimen/size_4dp"
            android:indeterminateDrawable="@drawable/progress_small_white" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_16dp"
            android:layout_marginLeft="@dimen/size_4dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/loading_comment"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/load_more_load_fail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">


        <TextView
            android:id="@+id/tv_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/load_failed"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/load_more_load_end_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/no_more_data"
            android:textColor="@color/color_999999"
            android:textSize="12sp" />
    </FrameLayout>
</FrameLayout>
