<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_white_shape"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/sd_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/sure_delete_title"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/text_size_16sp"
            />

        <TextView
            android:id="@+id/sd_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="14dp"
            android:text="@string/sure_delete_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16sp"
            android:visibility="gone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dialog_divide_line"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/sd_negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/cancel"
                android:textColor="@color/dialog_negative"
                android:textSize="@dimen/text_size_16sp"
                />

            <View
                android:id="@+id/sd_negative_split_view"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dialog_divide_line"
                />

            <TextView
                android:id="@+id/sd_positive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/confirm"
                android:textColor="@color/dialog_positive"
                android:textSize="@dimen/text_size_16sp"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
