<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_view_divider"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <include layout="@layout/include_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0_5dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@color/item_view_divider" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/size_0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/size_18dp"
                    android:paddingRight="@dimen/size_18dp">

                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/size_150dp"
                            android:layout_height="@dimen/size_150dp"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardCornerRadius="0dp"
                            app:cardElevation="0dp"
                            app:cardUseCompatPadding="false">

                            <ImageView
                                android:id="@+id/captureImg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/ic_image_default" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5dp"
                            android:text="@string/capture_image"
                            android:textSize="@dimen/text_size_11sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/size_150dp"
                            android:layout_height="@dimen/size_150dp"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardCornerRadius="0dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:id="@+id/controlImg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/ic_image_default"
                                android:scaleType="centerCrop" />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5dp"
                            android:text="@string/alarm_control_pic"
                            android:textSize="@dimen/text_size_11sp" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_0_5dp"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:background="@color/item_view_divider" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <include
                        layout="@layout/jq_person_details"
                        android:visibility="gone" />

                    <include
                        layout="@layout/jq_car_details"
                        android:visibility="visible" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_24dp"
                    android:background="@color/item_view_divider_my" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_49dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/AlarmInvalidButton"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="@dimen/size_49dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/un_effect"
            android:textColor="@color/face_login_color"
            android:textSize="@dimen/text_size_16sp" />

        <com.google.android.material.button.MaterialButton
            style="@style/AlarmEffectiveButton"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="@dimen/size_49dp"
            android:layout_weight="1"
            android:background="@drawable/common_bt_bg"
            android:gravity="center"
            android:text="@string/in_effect"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />

    </LinearLayout>
</LinearLayout>
